hphp/hack/test/typecheck/delay_non_awaitable.php
<?hh
// (c) Meta Platforms, Inc. and affiliates. Confidential and proprietary.

async function foo(): Awaitable<void> {
  delay 42;
}
